--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>
-  <h4 style="color:black">welcom to in project <span style="color:blueviolet">Mohammed Ziyed</span> by Angular</h4>
-</div>
+<main role="main" class="container pt-5">
+  <nav-bar></nav-bar>
+  <router-outlet></router-outlet>
+  <!-- <router-outlet|></router-outlet|> -->
+</main>
