--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<h1> on the main</h1>
 <main role="main" class="container pt-5">
   <nav-bar></nav-bar>
-  <router-outlet></router-outlet>
+<!--   <router-outlet></router-outlet> -->
   <!-- <router-outlet|></router-outlet|> -->
 </main>
